<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_options"
    android:padding="8dp"
    android:visibility="visible">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMenuOptions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <Button
        android:id="@+id/entryOptionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Ingreso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineMenuOptions"/>

    <Button
        android:id="@+id/exitOptionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Salida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineMenuOptions"/>

</androidx.constraintlayout.widget.ConstraintLayout>